Bug: topic submit logic

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -39,7 +39,7 @@ REDIS__DB=0
 # Project Settings
 # =============================================================================
 PROJECT__NAME="Quizzical"
-PROJECT__API_PREFIX="/api"
+PROJECT__API_PREFIX="/api/v1"
 
 # =============================================================================
 # Agent and LLM Settings
