updating checkpoint service

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,11 +30,12 @@ dependencies = [
     "azure-identity>=1.23.1,<2.0.0",
     "azure-appconfiguration-provider>=2.1.0,<3.0.0",
     "litellm>=1.35.2,<2.0.0",
-    "redis>=5.0.7,<6.0.0",
+    "redis>=6.2,<7.0",
+    "redisvl>=0.5.1",
     "tenacity>=8.5.0,<9.0.0",
     "langchain-core>=0.3.67,<0.4.0",
     "fal-client>=0.1.1",
-    "langgraph-checkpoint-redis>=0.0.6",
+    "langgraph-checkpoint-redis>=0.1.1",
     "langchain-community>=0.3.27,<0.4.0",
     "wikipedia (>=1.4.0,<2.0.0)",
     "httpx>=0.28.0,<0.29.0",
