--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -11,6 +11,7 @@
 VITE_API_BASE_URL=/api/v1
 VITE_TURNSTILE_SITE_KEY=1x00000000000000000000AA
 VITE_TURNSTILE_DEV_MODE=true
+VITE_USE_DB_RESULTS=false
 
 # Set this to 'true' to use mock data from /src/mocks/configMock.js
 # instead of making a live API call to the config endpoint.
