--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -74,3 +74,13 @@ profile = "black"
 line-length = 88
 select = ["E", "W", "F", "I", "C", "B"]
 ignore = ["E501"]
+[dependency-groups]
+dev = [
+    "pytest (>=8.4.2,<9.0.0)",
+    "pytest-asyncio (>=1.2.0,<2.0.0)",
+    "pytest-cov (>=7.0.0,<8.0.0)",
+    "httpx (>=0.28.1,<0.29.0)",
+    "aiosqlite (>=0.21.0,<0.22.0)",
+    "greenlet (>=3.2.4,<4.0.0)",
+    "pytest-mock (>=3.15.1,<4.0.0)"
+]
