--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -82,5 +82,6 @@ dev = [
     "httpx (>=0.28.1,<0.29.0)",
     "aiosqlite (>=0.21.0,<0.22.0)",
     "greenlet (>=3.2.4,<4.0.0)",
-    "pytest-mock (>=3.15.1,<4.0.0)"
+    "pytest-mock (>=3.15.1,<4.0.0)",
+    "trio (>=0.31.0,<0.32.0)"
 ]
