--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -83,5 +83,6 @@ dev = [
     "aiosqlite (>=0.21.0,<0.22.0)",
     "greenlet (>=3.2.4,<4.0.0)",
     "pytest-mock (>=3.15.1,<4.0.0)",
-    "trio (>=0.31.0,<0.32.0)"
+    "trio (>=0.31.0,<0.32.0)",
+    "asgi-lifespan (>=2.1.0,<3.0.0)"
 ]
