--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -88,3 +88,11 @@ lerna-debug.log*
 /frontend/dist
 /frontend/dist-ssr
 /frontend/*.local
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
