--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,6 +21,6 @@
 
     "types": ["vite/client"]
   },
-  "include": ["src"],
+  "include": ["src", "tests", "playwright/**/*.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
