--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ npm-debug.log
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+test-artifacts/
 
 Development tools
 /backend/local_quiz_diag.py
