--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
+    "test:watch": "vitest --watch",
     "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage",
+    "test:cov": "vitest run --coverage",
+    "coverage": "vitest run --coverage",
     "test-ct": "playwright test -c playwright-ct.config.ts",
     "e2e": "playwright test",
     "e2e:ui": "playwright test --ui",
@@ -40,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "@vitejs/plugin-react": "^4.6.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.19",
     "dotenv": "^17.2.3",
     "eslint": "^9.30.1",
