--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:sprite": "vite --open /sprite.html",
     "dev:e2e": "vite --mode e2e",
     "build": "vite build",
     "lint": "eslint .",
@@ -21,6 +22,7 @@
     "e2e:report": "playwright show-report"
   },
   "dependencies": {
+    "@uiball/loaders": "^1.3.1",
     "clsx": "^2.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
