--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:sprite": "vite --open /sprite.html",
+    "dev:result": "vite --open /result.html",
     "dev:e2e": "vite --mode e2e",
     "build": "vite build",
     "lint": "eslint .",
