Agent: Update to Responses API

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,9 +39,52 @@ services:
       # Force container-internal hosts for service discovery
       DATABASE__HOST: db
       REDIS__HOST: redis
-      # LOG_PROFILE: perf
-      # LOG_ALLOWED_EVENTS: logging_configured,llm_prompt,llm_response
-      # LOG_ALLOWED_LOGGERS: logging_config
+      
+            # --- profile & levels ---
+            # --- profile & levels ---
+      APP_ENVIRONMENT: local
+      LOG_PROFILE: perf                 # perf keeps logs tiny; use trace to debug everything
+      LOG_LEVEL_ROOT: INFO
+      LOG_LEVEL_APP: INFO
+      LOG_LEVEL_LIBS: WARNING
+
+      # --- whitelist (perf mode) ---
+      LOG_ALLOWED_LOGGERS: logging_config
+      # New event names used by logging_config.py
+      LOG_ALLOWED_EVENTS: >
+        logging_configured,
+        llm.call.start,llm.call.done,llm.call.slow,llm.call.error,
+        llm.stream.start,llm.stream.done,llm.stream.error,
+        llm.responses.parse_err,llm.responses.validation_err,
+        llm.invoke_structured.ok,llm.invoke_structured.fail
+      # Narrow if you want fewer app logs (optional). Leave as "app." to keep broad app logs.
+      LOG_ALLOWED_LOGGER_PREFIXES: app.
+
+      # --- sampling (perf mode; optional but recommended) ---
+      # Keep most events but sample high-frequency ones.
+      LOG_SAMPLE_DEFAULT: "1.0"         # default keep-rate for allowed events; 1.0 = keep all
+      LOG_SAMPLE_EVENTS: >
+        llm.call.start=0.1,
+        llm.call.done=0.1,
+        llm.stream.start=0.1,
+        llm.stream.done=0.1,
+        llm.invoke_structured.ok=0.2,
+        llm.call.slow=1.0,
+        llm.call.error=1.0,
+        llm.stream.error=1.0,
+        llm.responses.parse_err=1.0,
+        llm.responses.validation_err=1.0,
+        llm.invoke_structured.fail=1.0
+
+      # --- slow thresholds (optional) ---
+      LLM_SLOW_MS: "2000"               # mark LLM calls slower than 2s as "llm.call.slow"
+
+      # --- SDK toggles (unchanged) ---
+      OPENAI_LOG: info
+      LITELLM_LOG: WARNING
+      LITELLM_DEBUG: "0"
+      LITELLM_DISABLE_BACKGROUND_WORKER: "1"
+
     volumes:
       - ./backend:/app      # hot reload/dev
     depends_on:
