--- a/backend/appconfig.local.yaml
+++ b/backend/appconfig.local.yaml
@@ -34,8 +34,8 @@ quizzical:
     max_characters: 32
     baseline_questions_n: 6
     max_options_m: 4
-    max_total_questions: 20
-    min_questions_before_early_finish: 6
+    max_total_questions: 15
+    min_questions_before_early_finish: 8
     early_finish_confidence: 0.9
     first_step_timeout_s: 60.0
     stream_budget_s: 30.0
@@ -52,70 +52,70 @@ quizzical:
 
     tools:
       initial_planner:
-        model: "gpt-4o-mini"
+        model: "gpt-5-mini"
         temperature: 0.2
         max_output_tokens: 800
         timeout_s: 18
         json_output: true
 
       character_list_generator:
-        model: "gpt-4o-mini"
+        model: "gpt-5-mini"
         temperature: 0.3
         max_output_tokens: 2400
         timeout_s: 18
         json_output: true
 
       synopsis_generator:
-        model: "gpt-4o-mini"
+        model: "gpt-5-mini"
         temperature: 0.2
         max_output_tokens: 1000
         timeout_s: 18
         json_output: true
 
       profile_writer:
-        model: "gpt-4o-mini"
+        model: "gpt-5-mini"
         temperature: 0.4
-        max_output_tokens: 1600
+        max_output_tokens: 2400
         timeout_s: 18
         json_output: true
 
       profile_batch_writer:
-        model: "gpt-4o-mini"
+        model: "gpt-5-mini"
         temperature: 0.4
-        max_output_tokens: 4000
+        max_output_tokens: 5000
         timeout_s: 30
         json_output: true
 
       profile_improver:
-        model: "gpt-4o-mini"
+        model: "gpt-5-mini"
         temperature: 0.3
         max_output_tokens: 1600
         timeout_s: 18
         json_output: true
 
       character_selector:
-        model: "gpt-4o-mini"
+        model: "gpt-5-mini"
         temperature: 0.2
         max_output_tokens: 1000
         timeout_s: 18
         json_output: true
 
       question_generator:
-        model: "gpt-4o-mini"
+        model: "gpt-5-mini"
         temperature: 0.4
-        max_output_tokens: 1200
+        max_output_tokens: 5000
         timeout_s: 60
         json_output: true
 
       next_question_generator:
-        model: "gpt-4o-mini"
+        model: "gpt-5-mini"
         temperature: 0.4
         max_output_tokens: 800
         timeout_s: 18
         json_output: true
 
       final_profile_writer:
-        model: "gpt-4o-mini"
+        model: "gpt-5-mini"
         temperature: 0.3
         max_output_tokens: 1000
         timeout_s: 18
