--- a/backend/appconfig.local.yaml
+++ b/backend/appconfig.local.yaml
@@ -32,16 +32,16 @@ quizzical:
   quiz:
     min_characters: 2
     max_characters: 32
-    baseline_questions_n: 6
+    baseline_questions_n: 5
     max_options_m: 4
     max_total_questions: 15
     min_questions_before_early_finish: 8
     early_finish_confidence: 0.9
-    first_step_timeout_s: 60.0
+    first_step_timeout_s: 90.0
     stream_budget_s: 30.0
     # Bound parallel LLM calls for character generation.
     # Set to null to auto-pick (bounded in code), or an integer >= 1.
-    character_concurrency: 4
+    character_concurrency: 6
 
   agent:
     max_retries: 3
@@ -52,37 +52,37 @@ quizzical:
 
     tools:
       initial_planner:
-        model: "gpt-5-mini"
+        model: "gpt-4o-mini"
         temperature: 0.2
-        max_output_tokens: 800
-        timeout_s: 18
+        max_output_tokens: 500
+        timeout_s: 15
         json_output: true
 
       character_list_generator:
-        model: "gpt-5-mini"
-        temperature: 0.3
-        max_output_tokens: 2400
-        timeout_s: 18
+        model: "gpt-4o-mini"
+        temperature: 0.25
+        max_output_tokens: 900
+        timeout_s: 15
         json_output: true
 
       synopsis_generator:
-        model: "gpt-5-mini"
+        model: "gpt-4o-mini"
         temperature: 0.2
-        max_output_tokens: 1000
-        timeout_s: 18
+        max_output_tokens: 600
+        timeout_s: 15
         json_output: true
 
       profile_writer:
         model: "gpt-5-mini"
-        temperature: 0.4
-        max_output_tokens: 2400
-        timeout_s: 18
+        temperature: 0.35
+        max_output_tokens: 1600
+        timeout_s: 15
         json_output: true
 
       profile_batch_writer:
-        model: "gpt-5-mini"
-        temperature: 0.4
-        max_output_tokens: 5000
+        model: "gpt-4o-mini"
+        temperature: 0.3
+        max_output_tokens: 2300
         timeout_s: 30
         json_output: true
 
@@ -96,29 +96,31 @@ quizzical:
       character_selector:
         model: "gpt-5-mini"
         temperature: 0.2
-        max_output_tokens: 1000
+        max_output_tokens: 500
         timeout_s: 18
         json_output: true
 
       question_generator:
         model: "gpt-5-mini"
-        temperature: 0.4
+        temperature: 0.25
         max_output_tokens: 5000
-        timeout_s: 60
+        timeout_s: 45
         json_output: true
+        effort: "low"
 
       next_question_generator:
         model: "gpt-5-mini"
-        temperature: 0.4
-        max_output_tokens: 800
-        timeout_s: 18
+        temperature: 0.25
+        max_output_tokens: 5000
+        timeout_s: 30
         json_output: true
+        effort: "low"
 
       final_profile_writer:
-        model: "gpt-5-mini"
+        model: "gpt-4o-mini"
         temperature: 0.3
         max_output_tokens: 1000
-        timeout_s: 18
+        timeout_s: 30
         json_output: true
 
       safety_checker:
