Docker: updated for Azure env

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,62 +1,59 @@
-# backend/Dockerfile
+# -----------------------------------------------------------------------------
+# Backend (FastAPI) - Multi-stage build
+# Works for local dev (Compose) and Azure Container Apps
+# -----------------------------------------------------------------------------
 
-# -----------------------------
-# Stage 1: builder
-#
-# This stage installs all dependencies, including those needed for building
-# packages from source. The final runtime image will not contain these
-# build-time-only tools, keeping it small and secure.
-# -----------------------------
+# ======== Stage 1: builder (installs build tools + Python deps) =========
 FROM python:3.11-slim AS builder
 
-# Install build-essential which contains the C compiler (cc), make, and other
-# tools required for compiling Python packages with native extensions (e.g., fastuuid).
-# We update apt, install, and then clean up in a single layer to optimize image size.
+# System deps for building native wheels (e.g., fastuuid). Keep lean.
 RUN apt-get update && \
     apt-get install -y --no-install-recommends build-essential && \
     rm -rf /var/lib/apt/lists/*
 
-WORKDIR /appa
-
-# Install Poetry (exact version)
-ENV POETRY_VERSION=2.1.1
-RUN pip install "poetry==$POETRY_VERSION"
-
-# Poetry: install into system site-packages (no venv)
-RUN poetry config virtualenvs.create false
-
-# Copy dependency files to leverage Docker layer cache
-# This ensures we only re-run the lengthy install step if these files change.
-COPY poetry.lock pyproject.toml README.md ./
-
-# Install runtime dependencies only.
-# This command failed previously due to the missing build tools.
-RUN poetry install --no-root --no-interaction --no-ansi -vvv
-
-# -----------------------------
-# Stage 2: final runtime
-#
-# This is the final, lean image that will be used to run the application.
-# It copies the pre-installed packages from the builder stage without
-# including the build tools.
-# -----------------------------
-FROM python:3.11-slim AS final
-
-# Create a non-root user for better security (VS Code-friendly)
-RUN useradd -m -s /bin/bash -u 1000 appuser
-
+# Use a consistent workdir (fixes prior /appa typo)
 WORKDIR /app
 
-# Copy installed packages and binaries from the builder stage.
+# Poetry install (no venv → site-packages inside image)
+ENV POETRY_VERSION=2.1.1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
+RUN pip install --no-cache-dir "poetry==${POETRY_VERSION}" && \
+    poetry config virtualenvs.create false
+
+# Leverage Docker layer cache for deps
+COPY poetry.lock pyproject.toml README.md ./
+RUN poetry install --no-root --no-interaction --no-ansi -vvv
+# ^ Installs "main" dependencies into global site-packages
+
+# ======== Stage 2: final (small runtime image) ==========================
+FROM python:3.11-slim AS final
+
+# Install minimal runtime libs only (e.g., libpq5 for psycopg/pgvector)
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends libpq5 && \
+    rm -rf /var/lib/apt/lists/*
+
+# Non-root for better security
+RUN useradd -m -s /bin/bash -u 1000 appuser
+WORKDIR /app
+
+# Bring in site-packages and console scripts from builder
 COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
 COPY --from=builder /usr/local/bin /usr/local/bin
 
-# Copy application source code into the container.
-# The backend/.env file is read at runtime by the app via pydantic settings.
+# App source (copy the backend/ directory content when build context is ./backend)
+# NOTE: In CI (Azure), set build context to ./backend so this copies only backend code.
 COPY --chown=appuser:appuser . .
 
-# Do NOT bake runtime env variables here—Docker Compose supplies them via env_file
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1
+
 USER appuser
 
-# Launch the FastAPI application using Uvicorn
+# Container Apps will route to this port; Compose maps 8000:8000
+EXPOSE 8000
+
+# Default prod command (Compose overrides with --reload for local)
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
