--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -1,27 +1,40 @@
-# .github/workflows/api-deploy.yml
 name: deploy-api
-on: { push: { branches: [ main ] } }
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch: {}
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    permissions: { id-token: write, contents: read }
+    permissions:
+      id-token: write
+      contents: read
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
       - uses: azure/container-apps-deploy-action@v2
         with:
           resourceGroup: rg-quizzical-shared
           containerAppName: api-quizzical-dev
           acrName: acrquizzicaldev
-          dockerfilePath: ./backend/Dockerfile
-          buildContext: ./backend
           imageToBuild: acrquizzicaldev.azurecr.io/api-quizzical:${{ github.sha }}
+          dockerfilePath: ./backend/Dockerfile
           targetPort: 8000
           ingress: external
-          scaleRuleName: http
-          scaleRuleType: http
-          scaleHttpConcurrency: 10
+
+      - name: Set HTTP scale rule
+        run: |
+          az containerapp update \
+            -g rg-quizzical-shared \
+            -n api-quizzical-dev \
+            --scale-rule-name http \
+            --scale-rule-type http \
+            --scale-rule-http-concurrency 10
