--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -26,6 +26,7 @@ jobs:
           containerAppName: api-quizzical-dev
           acrName: acrquizzicaldev
           imageToBuild: acrquizzicaldev.azurecr.io/api-quizzical:${{ github.sha }}
+          appSourcePath: ./backend
           dockerfilePath: ./backend/Dockerfile
           targetPort: 8000
           ingress: external
