Update CORS for container

--- a/infrastructure/config-data/base-config.yml
+++ b/infrastructure/config-data/base-config.yml
@@ -1,3 +1,5 @@
+# infrastructure/config-data/base-config.yml
+
 # -----------------------------------------------------------------------------
 # Quizzical AI - Base Configuration File
 # -----------------------------------------------------------------------------
