--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ services:
       LITELLM_DEBUG: "1"
       LITELLM_VERBOSE: "1"
       ENABLE_JSON_SCHEMA_VALIDATION: "1"
+      LOG_TO_FILE: "true"  
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
       - ./backend:/app      # hot reload/dev (overlays source into container)
