--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -16,15 +16,15 @@ jobs:
       id-token: write
       contents: read
 
+    # Adjust these if your resource names change
     env:
-      # Azure resources
       RG: rg-quizzical-shared
       APP: api-quizzical-dev
       ACR: acrquizzicaldev
-
-      # Postgres server + database you created
+      KV_NAME: quizzical-shared-kv
       PG_SERVER: pg-quizzical-dev
       DB_NAME: quiz
+      APP_ENVIRONMENT: azure
 
     steps:
       - name: Checkout
@@ -37,32 +37,52 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Ensure rdbms-connect extension
-        run: az extension add --name rdbms-connect --upgrade
-
-      - name: Create/Update database schema (idempotent)
-        env:
-          PG_USER: ${{ secrets.PG_USER }}   # e.g. boredbobcat2
-          PG_PASS: ${{ secrets.PG_PASS }}   # e.g. kKexh3w_bcLeNDHglJYmog
+      - name: Ensure CLI extensions
         run: |
           set -euo pipefail
-          # Connectivity check
+          az extension add --name containerapp --upgrade
+          az extension add --name rdbms-connect --upgrade
+
+      - name: Ensure Postgres allow-list contains required extensions (vector, uuid-ossp)
+        shell: bash
+        run: |
+          set -euo pipefail
+          CUR="$(az postgres flexible-server parameter show \
+            -g "$RG" -s "$PG_SERVER" -n azure.extensions --query value -o tsv || true)"
+          add_if_missing() {
+            local list="$1" item="$2"
+            if [[ -z "$list" ]]; then echo "$item"; return; fi
+            if echo "$list" | tr ',' '\n' | grep -qx "$item"; then
+              echo "$list"
+            else
+              echo "${list},${item}"
+            fi
+          }
+          NEW="$CUR"
+          NEW="$(add_if_missing "$NEW" vector)"
+          NEW="$(add_if_missing "$NEW" uuid-ossp)"
+          if [[ "${NEW}" != "${CUR}" ]]; then
+            az postgres flexible-server parameter set \
+              -g "$RG" -s "$PG_SERVER" -n azure.extensions -v "$NEW" 1>/dev/null
+          fi
+
+      - name: Apply database schema (idempotent)
+        env:
+          PG_USER: ${{ secrets.PG_USER }}   # e.g. 'boredbobcat2' (your server admin user)
+          PG_PASS: ${{ secrets.PG_PASS }}   # the admin password you created
+        shell: bash
+        run: |
+          set -euo pipefail
           az postgres flexible-server execute \
-            -n "$PG_SERVER" \
-            -u "$PG_USER" \
-            -p "$PG_PASS" \
-            -d "$DB_NAME" \
+            -n "$PG_SERVER" -u "$PG_USER" -p "$PG_PASS" -d "$DB_NAME" \
             -q "SELECT 1;"
 
-          # Apply schema (safe to re-run due to IF NOT EXISTS / DO blocks)
+          # This file contains `CREATE EXTENSION IF NOT EXISTS vector;` and `uuid-ossp`, tables, indexes, etc.
           az postgres flexible-server execute \
-            -n "$PG_SERVER" \
-            -u "$PG_USER" \
-            -p "$PG_PASS" \
-            -d "$DB_NAME" \
+            -n "$PG_SERVER" -u "$PG_USER" -p "$PG_PASS" -d "$DB_NAME" \
             --file-path backend/db/init/init.sql
 
-      - name: Build and deploy Container App
+      - name: Build & deploy image to Container Apps
         uses: azure/container-apps-deploy-action@v2
         with:
           resourceGroup: ${{ env.RG }}
@@ -73,24 +93,54 @@ jobs:
           dockerfilePath: Dockerfile
           targetPort: 8000
           ingress: external
-          environmentVariables: |
-            APP_ENVIRONMENT=azure
-            DATABASE_URL=secretref:database-url
-            DATABASE__URL=secretref:database-url
-            REDIS_URL=secretref:redis-url
-            APPLICATIONINSIGHTS_CONNECTION_STRING=secretref:appinsights-conn
-            AZURE_MONITOR_CONNECTION_STRING=secretref:appinsights-conn
-            SECRET_KEY=secretref:secret-key
-            OPENAI_API_KEY=secretref:openai-api-key
-            FAL_AI_KEY=secretref:fal-ai-key
-            GROQ_API_KEY=secretref:groq-api-key
-            TURNSTILE_SECRET_KEY=secretref:turnstile-secret-key
+          # IMPORTANT: do not pass environmentVariables here; scripts will set them authoritatively
 
-      - name: Set HTTP scale rule
+      - name: Bind secrets from Key Vault & set env refs (authoritative)
+        shell: bash
+        env:
+          KV: ${{ env.KV_NAME }}
+          APP_ENV: ${{ env.APP_ENVIRONMENT }}
+          # PROTECT_EXISTING=1 prevents accidental overwrites of existing KV secrets
+          PROTECT_EXISTING: "1"
         run: |
-          az containerapp update \
-            -g "$RG" \
-            -n "$APP" \
-            --scale-rule-name http \
-            --scale-rule-type http \
-            --scale-rule-http-concurrency 10
+          set -euo pipefail
+          chmod +x infrastructure/scripts/bind-kv-dev.sh
+          ./infrastructure/scripts/bind-kv-dev.sh
+
+      - name: Sync non-secret env and bump revision
+        shell: bash
+        env:
+          APP_ENV: ${{ env.APP_ENVIRONMENT }}
+          RESTART: "0"
+        run: |
+          set -euo pipefail
+          chmod +x infrastructure/scripts/sync-nonsecret-env-dev.sh
+          # Add a CONFIG_BUMP to force a fresh revision even when only non-secrets changed
+          CONFIG_BUMP="$(date +%s)" ./infrastructure/scripts/sync-nonsecret-env-dev.sh azure
+
+      - name: Wait for readiness
+        shell: bash
+        run: |
+          set -euo pipefail
+          FQDN="$(az containerapp show -g "$RG" -n "$APP" --query 'properties.configuration.ingress.fqdn' -o tsv)"
+          echo "FQDN: https://${FQDN}"
+          for i in {1..60}; do
+            BODY="$(curl -sS "https://${FQDN}/readiness" || true)"
+            STATUS="$(printf '%s' "$BODY" | sed -n 's/.*"status":"\([^"]*\)".*/\1/p')"
+            REASON="$(printf '%s' "$BODY" | sed -n 's/.*"reason":"\([^"]*\)".*/\1/p')"
+            echo "readiness status=${STATUS:-<none>} reason=${REASON:-<none>}"
+            if [[ "$STATUS" == "ready" ]]; then
+              exit 0
+            fi
+            sleep 5
+          done
+          echo "Readiness did not become 'ready' in time."
+          echo "Last body: $BODY"
+          exit 1
+
+      - name: Output API docs URL
+        shell: bash
+        if: always()
+        run: |
+          FQDN="$(az containerapp show -g "$RG" -n "$APP" --query 'properties.configuration.ingress.fqdn' -o tsv)"
+          echo "Docs: https://${FQDN}/docs"
