--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -42,31 +42,45 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
 
+    defaults:
+      run:
+        working-directory: backend
+
     steps:
       - name: Checkout
         uses: actions/checkout@v5
 
-      - name: Set up Python (cached Poetry)
+      - name: Set up Python
         uses: actions/setup-python@v6
         with:
           python-version: "3.11"
-          cache: poetry
-          cache-dependency-path: backend/poetry.lock  # cache hits only when deps actually change
 
-      - name: Install Poetry & deps
-        working-directory: backend
+      # Install Poetry the supported way and add to PATH
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          # Pin if you want to avoid major upgrades; omit to get latest stable
+          version: latest
+          virtualenvs-create: true
+          virtualenvs-in-project: true  # creates backend/.venv
+
+      # Cache the in-project virtualenv so we only resolve/install when lockfile changes
+      - name: Cache Poetry virtualenv
+        id: poetry-cache
+        uses: actions/cache@v4
+        with:
+          path: backend/.venv
+          key: ${{ runner.os }}-py311-poetry-${{ hashFiles('backend/poetry.lock') }}
+
+      - name: Install dependencies (Poetry)
+        if: steps.poetry-cache.outputs.cache-hit != 'true'
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install poetry
-          poetry --version
-          poetry install --no-root
+          poetry install --no-interaction --no-root
 
       - name: Lint (Ruff)
-        working-directory: backend
         run: poetry run ruff check .
 
       - name: Test (Pytest)
-        working-directory: backend
         run: poetry run pytest
 
   # ======================
