--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -59,7 +59,6 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
-          # Pin if you want to avoid major upgrades; omit to get latest stable
           version: latest
           virtualenvs-create: true
           virtualenvs-in-project: true  # creates backend/.venv
@@ -74,14 +73,17 @@ jobs:
 
       - name: Install dependencies (Poetry)
         if: steps.poetry-cache.outputs.cache-hit != 'true'
-        run: |
-          poetry install --no-interaction --no-root
+        run: poetry install --no-interaction --no-root
 
+      # Lint without depending on Poetry-installed Ruff
       - name: Lint (Ruff)
-        run: poetry run ruff check .
+        uses: astral-sh/ruff-action@v3
+        with:
+          src: backend
+          args: "check --config backend/pyproject.toml"
 
       - name: Test (Pytest)
-        run: poetry run pytest
+        run: poetry run pytest -q
 
   # ======================
   # CD: Deploy (push to main or manual run only)
